crudini NEWS                                    -*- outline -*-

* Noteworthy changes in release 0.9.6 (????-??-??)

  Support BOM correctly.  Previously we would have stripped any
  Byte Order Mark, and incorrectly matched items on the first line.

  Extraneous blank lines are avoided when deleting a section.
  Previously blank lines preceeding a [section] were not removed.


* Noteworthy changes in release 0.9.5 (2023-10-04)

** Improvements

  Support for multiple --set and --del, or --get operations,
  allowing for more efficient and atomic updates to multiple parameters.

  Support indented ini files with --ini-options=ignoreindent.
  Indentation is ignored (and maintained) in the ini file.

  --format=sh will now attempt to output a whole ini file in sh format.
  Previously it would have only printed the section names.


* Noteworthy changes in release 0.9.4 (2022-12-23)

** Bug fixes

  Fix updating of flag only parameters so they
  don't have '=' or '=crudini_no_arg' added added on update.

  Handle closed stdin/stdout gracefully, without giving errors.

** Improvements

  Windows support.

  Windows line endings are maintained.

  Lists can be delimited with arbitrary whitespace with `--list-sep=`.

  Support for unspaced "name=val" format with `--ini-options=nospace`.


* Noteworthy changes in release 0.9.3 (2019-08-30)

** Bug fixes

  Reading ini files with windows line endings is again supported.
  Regression added in v0.9.

** Improvements

  python 3 support.


* Noteworthy changes in release 0.9 (2016-12-13)

** Bug fixes

  Write errors to stdout are diagnosed correctly and consistently.

  Replacing symlinks now replaces the target rather than the symlink itself.

** Changes in behavior

  The case of parameters is maintained with --get.

** Improvements

  Single token parameters (without equals) are now supported,
  which are used in mysql config for example.


* Noteworthy changes in release 0.8 (2016-11-23)

** Bug fixes
